# Portfolio-Rust

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  index.html
.github/workflows/: deploy.yml
app/: Cargo.toml
app/src/: lib.rs
app/src/components/: copyright.rs  dark_mode_toggle.rs  github_contributions.rs  graph_view.rs  mod.rs  navbar.rs  project.rs  recent_contributions.rs  stack_view.rs  tagfilter.rs
app/src/data/: github.rs  mod.rs  projects.rs  stack.rs
app/src/pages/: apprentissages.rs  articles.rs  contact.rs  contributions.rs  home.rs  projects.rs
app/src/pages/apprentissage/: comptoir.rs  mod.rs  sae_reseaux.rs  service_desk.rs
app/src/pages/article/: comptoir.rs  convertisseur_rust.rs  ferrumc.rs  gol_java.rs  mod.rs  portfolio_rust.rs  rustic.rs  voteomatic.rs
app/src/utils/: github_api.rs
docker/: Dockerfile
frontend/: Cargo.toml
frontend/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
src/: lib.rs
src/components/: copyright.rs  github_contributions.rs  mod.rs  navbar.rs  project.rs  recent_contributions.rs  social.rs  tagfilter.rs
src/data/: data.rs  github.rs  mod.rs
src/pages/: apprentissages.rs  articles.rs  contact.rs  contributions.rs  home.rs  mod.rs  not_found.rs  projects.rs
src/pages/apprentissage/: comptoir.rs  sae_reseaux.rs  service_desk.rs
src/pages/article/: comptoir.rs  convertisseur_rust.rs  gol_java.rs  mod.rs  voteomatic.rs
static/assets/: tailwind.css
static/cv/: cv.tex
