[workspace]
resolver = "2"
members = ["app", "frontend", "server"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[workspace.dependencies]
leptos = { version = "0.8" }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }

axum = "0.8"
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
wasm-bindgen = "0.2"

[[workspace.metadata.leptos]]
name = "portfolio"
bin-package = "server"
lib-package = "frontend"
site-root = "target/site"
site-pkg-dir = "pkg"
tailwind-input-file = "static/assets/tailwind.css"
assets-dir = "static"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = []
bin-default-features = false
lib-features = []
lib-default-features = false
