[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { workspace = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }

reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["csr"]
csr = ["leptos/csr"]
