[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
app = { path = "../app" }
axum = { workspace = true }
leptos = { workspace = true, features = ["ssr"] }
log = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
